fix gallery view cropping

--- a/src/components/GalleryView/GalleryView.css
+++ b/src/components/GalleryView/GalleryView.css
@@ -7,26 +7,8 @@
   width: 100vw;
 }
 
-.slick-track {
-  display: flex !important;
-  height: 100vh;
-}
-
 .slick-slide {
-  display: flex !important;
-  height: auto !important;
   background-color: white;
-}
-
-.slick-slide div {
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-.slick-slide div img {
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
 
 .gallery-close {
